--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -19879,5 +19879,14 @@
         <target><![CDATA[Du bist bei deiner Aktion aufgeflogen! <strong>Deine Mitbürger wissen jetz Bescheid!</strong>]]></target>
       </segment>
     </unit>
+    <unit id="U4ZJpTo" name="@deads Tot">
+      <notes>
+        <note category="german">@deads Tot</note>
+      </notes>
+      <segment>
+        <source>@deads Tot</source>
+        <target>@deads Tot</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
