--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -3769,7 +3769,7 @@
       </notes>
       <segment>
         <source>Um Schrauben festzudrehen oder zu lösen. Du kannst mit ihm etwas reparieren und zur Not auch eine Konservendose aufmachen. Wenn du ihn mit voller Wucht in einen Kopf rammst, kann er dir in Extremsituationen auch mal das Leben retten... </source>
-        <target>Le tournevis visse et dévisse, il vous permet de réparer des choses et à la limite, d'ouvrir des boîtes de conserve. En dernier ressort, plantez-le dans une tête: ça pourrait bien vous sauver la vie…</target>
+        <target>Le tournevis visse et dévisse, il vous permet de réparer des choses et à la limite, d'ouvrir des boîtes de conserve. En dernier ressort, plantez-le dans une tête : ça pourrait bien vous sauver la vie…</target>
       </segment>
     </unit>
     <unit id="dwk9h7d">
@@ -4048,7 +4048,7 @@
       </notes>
       <segment>
         <source>Es ist labbrig wie weiches Gummi und es riecht nach Fisch ... Was das wohl für ein Fleisch ist? Jedenfalls hat es bestimmt viele Vitamine und Proteine (und sonst hoffentlich nichts).</source>
-        <target>C'est un peu élastique et ça sent même le poisson… On se demande bien ce que ça Peut être, mais c'est surement plein de vitamines (et pas d'autres choses, espérez-vous).</target>
+        <target>C'est un peu élastique et ça sent même le poisson… On se demande bien ce que ça peut être, mais c'est surement plein de vitamines (et pas d'autres choses, espérez-vous).</target>
       </segment>
     </unit>
     <unit id="CiklaSg">
@@ -4183,7 +4183,7 @@
       </notes>
       <segment>
         <source>Eine alte Plastiktüte aus dem Supermarkt. Wenn du sie mit Wasser füllst, verwandelt sie sich in eine gefürchtete Waffe...</source>
-        <target>Un vieux sac plastique de super-marché qui peut se transformer en arme redoutable si vous le remplissez d'eau...</target>
+        <target>Un vieux sac plastique de supermarché qui peut se transformer en arme redoutable si vous le remplissez d'eau...</target>
       </segment>
     </unit>
     <unit id="4O9j8jG">
