--- a/translations/global.fr.xlf
+++ b/translations/global.fr.xlf
@@ -2787,5 +2787,14 @@
         <target>Cliquez pour changer de page</target>
       </segment>
     </unit>
+    <unit id="r7op6WZ">
+      <notes>
+        <note category="german">Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.</note>
+      </notes>
+      <segment>
+        <source>Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.</source>
+        <target>Vous n'avez pas le droit d'envoyer un objet à un citoyen hors de la ville en mode chaos.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
