--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -1724,7 +1724,7 @@
       </notes>
       <segment>
         <source>EternalTwin-Nutzer</source>
-        <target>Utilisateur de EternalTwin</target>
+        <target>Utilisateur EternalTwin</target>
       </segment>
     </unit>
     <unit id="0T9At.g">
