fix no job translation

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -6877,7 +6877,7 @@
       </notes>
       <segment>
         <source>Dieser Bürger ist nicht in der Lage, einen Beruf zu wählen. Wir sind noch lange nicht über den Berg, das kann ich euch sagen!</source>
-        <target>Ce citoyen ne serait même pas capable de choisir son occupation ! On est pas sorti, moi j'vous l'dis !</target>
+        <target>Ce citoyen ne serait même pas capable de choisir son occupation ! On est pas sorti, moi j'vous l'dis.</target>
       </segment>
     </unit>
     <unit id="dvSfZK0">
