FR Translation fix for last words

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -7435,7 +7435,7 @@
       </notes>
       <segment>
         <source>Letzte Worte:</source>
-        <target>Derniers mots :</target>
+        <target>Dernières paroles :</target>
       </segment>
     </unit>
     <unit id="396xkzr" name="...der Mörder .. ist.. IST.. AAARGHhh..">
